--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="description" content="A tree-guessing game based on trees.">
         <meta name="keywords" content="Guessing, game, trees">
         <title>Tree-Guessing Game</title>
-        <link rel="stylesheet" href="hangman.css">
-        <script src="hangman.js" defer></script>
+        <link rel="stylesheet" href="tree-guess.css">
+        <script src="treeGuess.js" defer></script>
     </head>
     <body>
         <h1>Tree-Guessing Game</h1>
